--- a/16 - Mouse Move Shadow/index-START.html
+++ b/16 - Mouse Move Shadow/index-START.html
@@ -29,12 +29,16 @@
   }
 
   h1 {
-    text-shadow: 10px 10px 0 rgba(0,0,0,1);
+    text-shadow: 10px 10px 0 red;
     font-size: 100px;
   }
   </style>
 
 <script>
+  // let p = document.getElementsByTagName('h1')[0];
+  // let move = p.addEventListener('mousemove', => (){
+  //   p.style.textShadow = 
+  // });
 </script>
 </body>
 </html>
