--- a/27 - Click and Drag/index-START.html
+++ b/27 - Click and Drag/index-START.html
@@ -40,35 +40,37 @@
   let itemArray = Array.from(item);
   let body = document.body;
   let xArray = [];
+  let isScrolling = false;
   
   for(let i = 0 ; i < itemArray.length ; i++){
-    let select = itemArray[i].addEventListener('mousedown', () => {
+    let select = itemArray[i].addEventListener('mousedown', (event) => {
       items.classList.add('active');
-      console.log(itemArray[i]);
-
+      isScrolling = true;
+    
       let scroll = body.addEventListener('mousemove', (event) => {
         let x = event.clientX;
-        console.log(event);
-        console.log(x);
-        xArray.push(x);
-        console.log(typeof x);
-        // console.log(xArray);
-        for(let j = 0 ; j < xArray.length ; j++){
-          if(xArray[j] < xArray[j+1]){
-            // console.log('scroll droit');
-          }else if(xArray[j] = xArray[j+1]){
-            // console.log('immobile');
-          }else{
-            // console.log('scroll gauche');
+        if(isScrolling === true){
+          xArray.push(x);
+          for(let j = 1 ; j < xArray.length ; j++){
+            if(xArray[j] < xArray[j-1]){
+              items.style.transform = "translateX(50px)";
+            }else if(xArray[j] === xArray[j-1]){
+              items.style.transform = "translateX(0px)";
+            }else{
+              items.style.transform = "translateX(-50px)";
+            }
           }
-        }
+          
+        }  
       });
     });
-
     let unSelect = itemArray[i].addEventListener('mouseup', () => {
-        items.classList.remove('active');
-      });
-  }
+      items.classList.remove('active');
+      if(isScrolling === true){
+        isScrolling = false;
+      }  
+    });
+  }  
    
   
   
